--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@
 # project files should be checked into the repository, unless a significant
 # proportion of contributors will probably not be using SublimeText
 # *.sublime-project
+
+### Composer ###
+composer.lock
